# pump-or-rug-mobile

./: .env.example  .gitignore  .pnp.cjs  Anchor.toml  Cargo.toml  README.md  SECURITY_AUDIT_V1.md  SECURITY_AUDIT_V2.md  SECURITY_AUDIT_V3.md  app.json  bun.lockb  entrypoint.js  fly.toml  metro.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
app/: +not-found.tsx  _layout.tsx  login.tsx
components/: AnimatedEntry.tsx  BetSheet.tsx  CountdownTimer.tsx  GlowCard.tsx  LeaderboardRow.tsx  PumpRugButton.tsx  ResultBadge.tsx  RoundCard.tsx  ShimmerLoader.tsx  SkeletonLeaderboardRow.tsx  SkeletonProfile.tsx  SkeletonRoundCard.tsx  SkeletonRoundDetail.tsx  StreakBanner.tsx  ToastOverlay.tsx  TokenDetail.tsx  TokenSlot.tsx
constants/: theme.ts
docs/: GAME_RULES_V1.md  IDEA_OVERVIEW.md  IMPLEMENTATION_GUIDE_7D.md  LITEPAPER_DESIGN_GUIDELINES.md  LITEPAPER_SITE_CONTENT.md  SECURITY_AUDIT.md  TOKEN_SELECTION_V1.md
lib/: api.ts  auth.ts  mock-data.ts  solana.ts  store.ts  toast.ts  types.ts  utils.ts  wallet.tsx
litepaper/: package-lock.json  package.json  tailwind.config.ts
programs/pump_or_rug_escrow/: Cargo.toml
programs/pump_or_rug_escrow/src/: constants.rs  errors.rs  events.rs  helpers.rs  lib.rs
programs/pump_or_rug_escrow/src/instructions/: admin.rs  claim.rs  close_round.rs  create_round.rs  initialize_config.rs  mod.rs  place_bet.rs  resolve_round.rs  sweep_fees.rs
programs/pump_or_rug_escrow/src/state/: bet_position.rs  global_config.rs  mod.rs  round.rs
scripts/: backtest.py  bags_native_probe.py  init-config.ts
(+76 files in other folders)
